# adventofcode2019-hs

./: adventofcode2019-hs.cabal  day1.hs
exe/: Solve.hs
lib/: Lib.hs
src/AoC/: Intcode.hs  Lib.hs
src/Solutions/: Day1.hs  Day2.hs
test/AoC/: IntcodeSpec.hs
test/Solutions/: Day1Spec.hs  Day2Spec.hs
