cabal-version:       2.4

name:                adventofcode2019-hs
version:             0.1.0.0
author:              bklaase


common common
  build-depends:       base ^>=4.13.0.0
  default-language:    Haskell2010
  build-depends:       base ^>=4.13.0.0,
                       adventofcode2019-hs,

library
  exposed-modules:     Lib
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      ./lib
  default-language:    Haskell2010

executable day1
  import:              common
  main-is:             day1.hs
