cabal-version:         3.0

name:                  adventofcode2019-hs
version:               0.1.0.0
author:                bklaase


common common
  default-language:    Haskell2010
  build-depends:       base ^>=4.14.1.0,
                       adventofcode2019-hs
--  other-modules:       AoC.Lib

library
  exposed-modules:     AoC.Lib, AoC.Intcode,
                       Solutions.Day1,
                       Solutions.Day2,
  build-depends:       base ^>=4.14.1.0,
                       time ^>=1.9.3,
                       array ^>=0.5.4.0
  default-language:    Haskell2010
  hs-source-dirs:      ./src

executable solve
  import:              common
  hs-source-dirs:      ./exe
  main-is:             Solve.hs

executable test
  import:              common
  hs-source-dirs:      ./test
  main-is:             Spec.hs
  other-modules:       AoC.IntcodeSpec,
                       Solutions.Day1Spec,
                       Solutions.Day2Spec,
  build-depends:       hspec ^>=2.7.4,
                       array ^>=0.5.4.0


-- test-suite spec
  -- import: common
  -- type: detailed-0.9
  -- test-module: Spec
  -- other-modules: AoC.IntcodeSpec
  -- hs-source-dirs: test
  -- ghc-options: -Wall
  -- build-depends: hspec, array
--  build-tool-depends: hspec-discover:hspec-discover == 2.*